<resources>
    <string name="app_name">Health and Fitness App</string>
    <string name="login">Login</string>
    <string name="health_and_fitness_app">Health And Fitness App</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SignUp</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset_text">We need your registered email address to send your password reset</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fitness_message">Whether you’re working at home, traveling, or social distancing, it isn’t always possible to get to the gym. But these tips can help you stay active and healthy whatever your circumstances.</string>
    <string name="fitness_image_text">fitness image</string>
    <string name="fitness_time_test">1 week</string>
    <string name="duration">Duration</string>
    <string name="start_programme">Start programme</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_text">DifficultyText</string>
    <string name="duration_text">DurationText</string>
    <string name="programme_overview">Programme overview</string>
    <string name="programme_details">Programme details</string>
    <string name="title_fitness">Title Fitness</string>
    <string name="general_settings">General settings</string>
    <string name="user_email">User email</string>
    <string name="user_name">USER NAME</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="are_you_satisfied_with_the_service">Are you satisfied with the service?</string>
    <string name="tell_us_what_can_be_improved">Tell us what can be improved!</string>
    <string name="send_review">Send Review</string>
    <string name="tell_us_on_how_we_can_improve">Tell us on how we can improve...</string>
    <string name="about_us">About us</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum1">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="meet_the_team">Meet the team</string>
    <string name="neacsu_alexandru_cristian">Neacsu Alexandru Cristian</string>
    <string name="alex_neacsu_email">alexneacsu2000@gmail.com</string>
    <string name="petre_mihai_bogdan">Petre Mihai Bogdan</string>
    <string name="petre_bogdan_email">petrebogdan55@yahoo.com</string>
    <string name="users_reviews">Users Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="stars">Stars</string>
    <string name="back">Back</string>
    <string name="alarm_on_off">Alarm On/Off</string>
    <string name="height_cm">Height (cm)</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="_0">0</string>
    <string name="sleep_time_min">Sleep Time (min)</string>
    <string name="zero">0</string>
    <string name="statistics">Statistics</string>
    <string name="use_kg">Use kg</string>
    <string name="use_cm">Use cm</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="_123456">123456</string>
    <string name="step_counter">Step Counter</string>
    <string name="water_counter">Water Counter</string>
    <string name="zero_sign">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="space_hint">_____</string>
    <string name="future_feature">Future Feature</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="open_maps">Open Maps</string>
    <string name="speed_0_km_h">Speed: 0 km/h</string>
    <string name="start">Start</string>
    <string name="metric_units">Metric Units</string>
    <string name="distance_per_second_0_m">Distance per second: 0 m</string>
    <string name="longitude_0">Longitude: 0</string>
    <string name="latitude_0">Latitude: 0</string>
    <string name="no_notifications_at_the_moment">No notifications at the moment!</string>
    <string name="notifications">Notifications</string>
</resources>